fix android not showing bro

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -365,6 +365,7 @@ body {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../../img/hero-small.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
 }
